Fixed gulp calling wrong Less project file and other minor styles fixes

--- a/builds/dev/contact.html
+++ b/builds/dev/contact.html
@@ -81,6 +81,22 @@
     <section>
         <h2>Contact us</h2>
 
+
+
+        <form id="contact-form" action="#" method="post">
+
+            <p>
+                <label for="name">
+                    <span>Name: </span>
+                    <strong><abbr title="required">*</abbr></strong>
+                </label>
+                <input type="text" id="name" name="username">
+            </p>
+
+            <button class="buttton">Submit</button>
+
+        </form>
+
     </section>
 
 </main>
