--- a/builds/dev/contact.html
+++ b/builds/dev/contact.html
@@ -80,23 +80,26 @@
 
     <section>
         <h2>Contact us</h2>
+        <form id="contactForm" action="#" method="post">
 
+            <div class="formgroup">
+                <label for="name">Name</label>
+                <input id="name" type="text" name="name" maxlength="25" pattern="[a-z A-Z-]+" placeholder="Your name" autofocus></input>
+            </div>
 
+            <div class="formgroup">
+                <label for="email">Email</label>
+                <input id="email" type="email" name="email" maxlength="75" placeholder="email@gmail.com"></input>
+            </div>
 
-        <form id="contact-form" action="#" method="post">
+            <div class="formgroup">
+                <label for="enquiry">Enquiry</label>
+                <textarea id="enquiry" name="enquiry" rows="5" cols="100" maxlength="750" placeholder="Details of your enquiry"></textarea>
+            </div>
 
-            <p>
-                <label for="name">
-                    <span>Name: </span>
-                    <strong><abbr title="required">*</abbr></strong>
-                </label>
-                <input type="text" id="name" name="username">
-            </p>
-
-            <button class="buttton">Submit</button>
+            <input class="button" type="submit" value="Send"></input>
 
         </form>
-
     </section>
 
 </main>
