added same rules for a tags as buttons and working on disabled styles

--- a/builds/dev/index.html
+++ b/builds/dev/index.html
@@ -97,6 +97,12 @@
 				</div>
 			</section>
 
+			<!-- Check button styles -->
+			<button class="button" type="button">Question</button>
+			<a class="button" href="#">Question</a>
+            <button class="button" type="button" disabled>Question</button>
+            <a class="button disabled" href="#">Question</a>
+
 		</main>
 
 
