--- a/builds/dev/403.html
+++ b/builds/dev/403.html
@@ -2,9 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>403</title>
+    <title>Permission Denied</title>
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway:100,600" rel="stylesheet" type="text/css">
+
+    <!-- Styles -->
+    <style>
+        html, body {
+            background-color: #fff;
+            color: #636b6f;
+            font-family: 'Raleway', sans-serif;
+            font-weight: 100;
+            height: 100vh;
+            margin: 0;
+        }
+
+        .full-height {
+            height: 100vh;
+        }
+
+        .flex-center {
+            align-items: center;
+            display: flex;
+            justify-content: center;
+        }
+
+        .position-ref {
+            position: relative;
+        }
+
+        .content {
+            text-align: center;
+        }
+
+        .title {
+            font-size: 5em;
+        }
+
+        .m-b-md {
+            margin-bottom: 30px;
+        }
+
+    </style>
 </head>
 <body>
+<div class="flex-center position-ref full-height">
 
+    <div class="content">
+        <div class="title m-b-md">
+            Thou shall not pass!
+        </div>
+    </div>
+
+</div>
 </body>
 </html>
