--- a/builds/prod/404.html
+++ b/builds/prod/404.html
@@ -1,1 +1,40 @@
-<!DOCTYPE html><html lang=en><head><meta charset=UTF-8><title>404</title></head><body></body></html>
+<!DOCTYPE html><html lang=en><head><meta charset=UTF-8><title>403</title><link href="https://fonts.googleapis.com/css?family=Raleway:100,600" rel=stylesheet type=text/css><style>
+        html, body {
+            background-color: #fff;
+            color: #636b6f;
+            font-family: 'Raleway', sans-serif;
+            font-weight: 100;
+            height: 100vh;
+            margin: 0;
+        }
+
+        .full-height {
+            height: 100vh;
+        }
+
+        .flex-center {
+            align-items: center;
+            display: flex;
+            justify-content: center;
+        }
+
+        .position-ref {
+            position: relative;
+        }
+
+        .content {
+            text-align: center;
+        }
+
+        .title {
+            font-size: 5em;
+        }
+
+        .m-b-md {
+            margin-bottom: 30px;
+        }
+        a {
+            text-decoration: none;
+            font-size: 1.5em;
+        }
+    </style></head><body><div class="flex-center position-ref full-height"><div class=content><div class="title m-b-md">Something went wrong...</div><a href="/">Take me home</a></div></div></body></html>
