Added parallax CSS example. Work in progress

--- a/builds/dev/index.html
+++ b/builds/dev/index.html
@@ -80,17 +80,17 @@
 
 			<section>
 				<h2>About us</h2>
-				<div class="column-container">
-					<div class="column">
+				<div class="multi-column">
+					<div class="flex-item">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad culpa ea explicabo harum ipsum
 							molestias! Corporis ducimus iure libero magni minus. Aperiam doloremque facere voluptates.</p>
 					</div>
-					<div class="column">
+					<div class="flex-item">
 						<p>Aliquid assumenda consectetur corporis, cupiditate deserunt necessitatibus nobis, praesentium
 							quam quos reprehenderit unde voluptatem voluptates. Accusantium et hic id magnam quisquam
 							repellat soluta sunt veritatis.</p>
 					</div>
-					<div class="column">
+					<div class="flex-item">
 						<p>Adipisci delectus dolore expedita molestiae reprehenderit, repudiandae voluptas. Dicta maiores
 							mollitia officiis quidem sint. A deleniti eum ex fugiat modi molestiae nemo, nisi rem velit!</p>
 					</div>
