--- a/builds/dev/index.html
+++ b/builds/dev/index.html
@@ -25,8 +25,8 @@
 			<link rel="shortcut icon" href="images/favicon.ico">
 			<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 
-            <!-- Font Awesome scalable vector icons (https://fortawesome.github.io/Font-Awesome/) -->
-			<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+            <!-- Font Awesome scalable vector icons (https://fortawesome.github.io/Font-Awesome/)
+			<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
 
 			<!-- Your custom styles -->
 			<link rel="stylesheet" href="css/styles.min.css">
@@ -105,76 +105,15 @@
 		<!--			 	       Footer					       -->
 		<!--*******************************************************-->
 
-		<footer class="site-footer">
-			<!-- Additional section added to improve document outline -->
-			<section>
-				<h1 class="offscreen">Footer</h1>
-				<section class="column-container">
-					<h2 class="offscreen">Copyright section</h2>
-					<p><span id="copyright"></span> - All rights reserved</p>
-					<nav role="navigation">
-						<h3 class="offscreen">Secondary navigation</h3>
-						<ul class="navigation-list">
-							<li><a href="#">Link 1</a></li>
-							<li><a href="#">Link 2</a></li>
-							<li><a href="#">Link 3</a></li>
-							<li><a href="#">Link 4</a></li>
-							<li><a href="#">Link 5</a></li>
-						</ul>
-					</nav>
-				</section>
-				<section class="social-media">
-					<h2 class="offscreen">Social media links</h2>
-					<a href="#">
-						<svg class="icon facebook" role="img" title="Facebook">
-							<use xlink:href="images/icons.svg#facebook" />
-						</svg>
-					</a>
-					<a href="#">
-						<svg class="icon twitter" role="img" title="Facebook">
-							<use xlink:href="images/icons.svg#twitter" />
-						</svg>
-					</a>
-					<a href="#">
-						<svg class="icon google" role="img" title="Facebook">
-							<use xlink:href="images/icons.svg#google" />
-						</svg>
-					</a>
-					<a href="#">
-						<svg class="icon instagram" role="img" title="Instagram">
-							<use xlink:href="images/icons.svg#instagram" />
-						</svg>
-					</a>
-				</section>
-			</section>
-		</footer>
+		<footer id="site-footer" class="site-footer"></footer>
 
 
 
 		<!--*******************************************************-->
-		<!--			 	   Javascript Links					   -->
+		<!--			 	   Javascript 					   	   -->
 		<!--*******************************************************-->
 
-		<!-- ONLY LIBRARY INCLUDES AND/OR FUNCTION CALLS. NO CODE! -->
-
-        <!-- Fastest loading jQuery version -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-		<!--<script>if (typeof jQuery === 'undefined') {-->
-		  		<!--document.write(unescape('js/jquery-2.1.4.min.js'));-->
-			<!--}-->
-		<!--</script>-->
-
-		<!-- SVG for IE and older browsers -->
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/svg4everybody/2.1.3/svg4everybody.min.js"></script>
-		<script type="text/javascript">
-			svg4everybody();
-		</script>
-
-        <!-- Other helper JS frameworks -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-
-        <!-- Custom Javascript -->
-        <script src="js/script.min.js"></script>
+		<script src="./js/dist/steal.production.js"></script>
 
     </body>
 </html>
