--- a/builds/dev/index.html
+++ b/builds/dev/index.html
@@ -46,29 +46,7 @@
 		<!--			 	       Header					       -->
 		<!--*******************************************************-->
 
-		<header class="site-header">
-			<h1> Website Title</h1>
-			<nav class="nav-bar" role="navigation">
-				<h2 class="offscreen">Main navigation</h2>
-				<div class="logo"></div>
-				<ul id="navigation-list" class="navigation-list">
-					<li><a href="">Link 1</a></li>
-					<li><a href="">Link 2</a></li>
-					<li><a href="">Link 3</a></li>
-					<li><a href="">Link 4</a></li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-			</nav>
-
-			<!-- Hamburger Button-->
-			<button id="navbar-toggle" type="button" class="navbar-toggle">
-				<!--<span class="sr-only">Toggle navigation</span>-->
-				<span></span>
-				<span></span>
-				<span></span>
-				<span></span>
-			</button>
-		</header>
+		<header id="site-header" class="site-header"></header>
 
 
 
