--- a/builds/dev/index.html
+++ b/builds/dev/index.html
@@ -80,7 +80,6 @@
 
 		<div id="cta-wrapper" class="cta-wrapper"></div>
 
-
 		<!--*******************************************************-->
 		<!--			 	       Footer					       -->
 		<!--*******************************************************-->
@@ -94,6 +93,12 @@
 		<!--*******************************************************-->
 
 		<script src="./js/dist/steal.production.js"></script>
+
+		<!-- Steal a specific component to display on this page only -->
+		<script type="text/steal-module">
+		    //import cta-banner from "components/bottom-cta/bottom-cta";
+		    //import test from "components/test/test";
+        </script>
 
     </body>
 </html>
