FINALLY got stealjs working correctly. Made some small other small adjustments

--- a/builds/dev/contact.html
+++ b/builds/dev/contact.html
@@ -89,26 +89,20 @@
 
 
 
-<!--*******************************************************-->
-<!--			 	       Footer					       -->
-<!--*******************************************************-->
+    <!--*******************************************************-->
+    <!--			 	       Footer					       -->
+    <!--*******************************************************-->
 
-<footer id="site-footer" class="site-footer"></footer>
+    <footer id="site-footer" class="site-footer"></footer>
 
 
 
-<!--*******************************************************-->
-<!--			 	   Javascript Links					   -->
-<!--*******************************************************-->
+    <!--*******************************************************-->
+    <!--		 StealJS Bundle (No more script tags!)		   -->
+    <!--*******************************************************-->
 
-        <script src="./js/dist/steal.production.js"></script>
+    <script src="./js/dist/steal.production.js"></script>
 
-        <!-- Steal a specific component to display on this page only -->
-        <script type="text/steal-module">
-            import maps from "components/map/map";
-            //maps("#map-container");
-
-        </script>
 
 </body>
 </html>
