--- a/builds/dev/index.html
+++ b/builds/dev/index.html
@@ -56,24 +56,6 @@
 
 		<main class="main-content" role="main">
 
-			<section>
-				<h2>About us</h2>
-				<div class="multi-column">
-					<div class="flex-item">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad culpa ea explicabo harum ipsum
-							molestias! Corporis ducimus iure libero magni minus. Aperiam doloremque facere voluptates.</p>
-					</div>
-					<div class="flex-item">
-						<p>Aliquid assumenda consectetur corporis, cupiditate deserunt necessitatibus nobis, praesentium
-							quam quos reprehenderit unde voluptatem voluptates. Accusantium et hic id magnam quisquam
-							repellat soluta sunt veritatis.</p>
-					</div>
-					<div class="flex-item">
-						<p>Adipisci delectus dolore expedita molestiae reprehenderit, repudiandae voluptas. Dicta maiores
-							mollitia officiis quidem sint. A deleniti eum ex fugiat modi molestiae nemo, nisi rem velit!</p>
-					</div>
-				</div>
-			</section>
 
 		</main>
 
@@ -88,17 +70,11 @@
 
 
 
-		<!--*******************************************************-->
-		<!--			 	   Javascript 					   	   -->
-		<!--*******************************************************-->
+        <!--*******************************************************-->
+        <!--		 StealJS Bundle (No more script tags!)		   -->
+        <!--*******************************************************-->
 
-		<script src="./js/dist/steal.production.js"></script>
-
-		<!-- Steal a specific component to display on this page only -->
-		<script type="text/steal-module">
-		    //import cta-banner from "components/bottom-cta/bottom-cta";
-		    //import test from "components/test/test";
-        </script>
+        <script src="./js/dist/steal.production.js"></script>
 
     </body>
 </html>
