Added a scroll to top button

--- a/builds/dev/index.html
+++ b/builds/dev/index.html
@@ -54,7 +54,7 @@
 		<!--			 	     Main Content					   -->
 		<!--*******************************************************-->
 
-		<main class="main-content" role="main">
+		<main id="main-content" class="main-content" role="main">
 
 
 			<section id="features" class="features"></section>
@@ -62,7 +62,7 @@
 		</main>
 
 
-		<div id="cta-wrapper" class="cta-wrapper"></div>
+		<!--<div id="cta-wrapper" class="cta-wrapper"></div>-->
 
 		<!--*******************************************************-->
 		<!--			 	       Footer					       -->
