Added structural changes to some templates and minor improvements;

--- a/builds/dev/index.html
+++ b/builds/dev/index.html
@@ -59,6 +59,8 @@
 
 			<section id="features" class="features"></section>
 
+			<section id="testimonials" class="testimonials"></section>
+
 		</main>
 
 
