--- a/builds/dev/contact.html
+++ b/builds/dev/contact.html
@@ -57,8 +57,9 @@
 <main class="main-content" role="main">
 
     <section>
+        <div class="container">
         <h2>Contact us</h2>
-        <form id="contactForm" action="#" method="post">
+        <form id="" action="#" method="post">
 
             <div class="formgroup">
                 <label for="name">Name</label>
@@ -78,6 +79,12 @@
             <input class="button" type="submit" value="Send"></input>
 
         </form>
+        </div>
+    </section>
+
+    <section>
+        <h2>Contact Form</h2>
+        <div id="form-container" class="form"></div>
     </section>
 
     <section>
