--- a/builds/prod/index.html
+++ b/builds/prod/index.html
@@ -2,4 +2,4 @@
 		 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		 	<script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
 		 	<script src="https://raw.githubusercontent.com/scottjehl/Respond/master/src/respond.js"></script>
-		 <![endif]--></head><body><header id=site-header class=site-header></header><main id=main-content class=main-content role=main><section id=features class=features></section></main><footer id=site-footer class=site-footer></footer><script src=./js/dist/steal.production.js></script></body></html>
+		 <![endif]--></head><body><header id=site-header class=site-header></header><main id=main-content class=main-content role=main><section id=features class=features></section><section id=testimonials class=testimonials></section></main><footer id=site-footer class=site-footer></footer><script src=./js/dist/steal.production.js></script></body></html>
