--- a/builds/dev/about.html
+++ b/builds/dev/about.html
@@ -56,7 +56,7 @@
 
 <main class="main-content" role="main">
 
-    <section>
+    <section class="description-container">
         <div class="container">
             <h2>About us</h2>
             <div class="multi-column">
@@ -77,13 +77,12 @@
         </div>
     </section>
 
-    <section>
+    <section class="carousel-container">
         <div id="carousel"></div>
     </section>
 
 </main>
 
-<div id="main"/>
 
 
 <!--*******************************************************-->
